# paper-client-rs

./: Cargo.toml  README.md
src/: addr.rs  arg.rs  async_client.rs  async_paper_client.rs  async_pool.rs  client.rs  command.rs  error.rs  lib.rs  paper_client.rs  paper_pool.rs  policy.rs  pool.rs  response.rs  stats.rs  status.rs  value.rs
tests/: auth.rs  del.rs  get.rs  has.rs  peek.rs  ping.rs  policy.rs  pool.rs  resize.rs  set.rs  size.rs  stats.rs  status.rs  ttl.rs  version.rs  wipe.rs
tests/common/: mod.rs
