[package]
name = "paper-client"
version = "1.10.2"
edition = "2024"
license = "AGPL-3.0"
description = "The Rust PaperCache client."
repository = "https://github.com/PaperCache/paper-client-rs.git"
readme = "README.md"
homepage = "https://papercache.io"
keywords = ["caching", "PaperCache"]
categories = ["caching"]

[dependencies]
paper-utils = "1.2.6"
kwik = "1.18.6"
thiserror = "2.0.12"
tokio = { version = "1", features = ["net", "io-util"], optional = true }
bytes = { version = "1.11.1", optional = true }

[dev-dependencies]
serial_test = "3.2.0"

[features]
tokio = ["dep:tokio", "dep:bytes"]
