[package]
name = "paper-client"
version = "1.11.0"
edition = "2024"
license = "AGPL-3.0"
description = "The Rust PaperCache client."
repository = "https://github.com/PaperCache/paper-client-rs.git"
readme = "README.md"
homepage = "https://papercache.io"
keywords = ["caching", "PaperCache"]
categories = ["caching"]

[dependencies]
paper-utils = { version = "1.3.0", features = ["tokio"] }
kwik = "1.19.2"
thiserror = "2.0.18"
tokio = { version = "1", features = ["net", "io-util", "macros", "rt", "time", "sync"], optional = true }

[dev-dependencies]
serial_test = "3.3.1"

[features]
tokio = ["dep:tokio"]
